--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:push": "prisma db push",
@@ -14,8 +14,8 @@
     "seed:local": "npm run db:push && npm run db:generate && npx prisma db seed"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
     "@sendgrid/mail": "^7.7.0",
+    "@supabase/supabase-js": "^2.58.0",
     "autoprefixer": "^10.4.16",
     "aws-sdk": "^2.1497.0",
     "bcryptjs": "^2.4.3",
@@ -31,6 +31,7 @@
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.13.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
